--- a/src/main/resources/mustache/JavaSpring/pojo.mustache
+++ b/src/main/resources/mustache/JavaSpring/pojo.mustache
@@ -106,11 +106,15 @@ public class {{classname}} {{#parent}}extends {{{parent}}}{{/parent}} {{#seriali
     }
     if (o == null || getClass() != o.getClass()) {
       return false;
-    }{{#hasVars}}
+}{{#parent}}
+    if (!super.equals(o)) {
+    return false;
+    }
+{{/parent}}
+{{#hasVars}}
     {{classname}} {{classVarName}} = ({{classname}}) o;
     return {{#vars}}Objects.equals(this.{{name}}, {{classVarName}}.{{name}}){{#hasMore}} &&
-        {{/hasMore}}{{/vars}}{{#parent}} &&
-        super.equals(o){{/parent}};{{/hasVars}}{{^hasVars}}
+    {{/hasMore}}{{/vars}};{{/hasVars}}{{^hasVars}}
     return true;{{/hasVars}}
   }
 
